--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Thu Mar 03 02:05:41 JST 2011
+#Fri Mar 04 10:08:26 JST 2011
 eclipse.preferences.version=1
-encoding//src/widgets/jquery.ui.scruploadThumbnail.js=UTF-8
+encoding//src/widgets/jquery.ui.scropThumb.js=UTF-8
 encoding/<project>=UTF-8
